LOGCXX-156: fix autoflushing for console appender